Fix preview not wrapping in embed mode

--- a/style.css
+++ b/style.css
@@ -23,8 +23,11 @@ body {
     border: 1px solid #c5c5c5;
     padding: 8px;
     tab-size: 4;
-    white-space: nowrap;
     box-shadow: inset 0 2px 12px #0000008c;
+}
+
+.codeTextarea:not(:disabled) {
+    white-space: nowrap;
 }
 
 .javascriptLog {
